2004-10-28  James Henstridge  <james@jamesh.id.au>

	* gnome-autogen.sh (m4dir): fix up the AC_CONFIG_MACRO_DIR check
	to work with sub-package configure.in's.

2004-10-27  James Henstridge  <james@jamesh.id.au>

	* gnome-autogen.sh (ACLOCAL): if AC_CONFIG_MACRO_DIR() is used in
	configure.ac, pass that directory to aclocal.
	Run libtoolize if the configure.ac file calls LT_INIT (the new
	name for AC_PROG_LIBTOOL in libtool-2.0).

2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-autogen.sh: Add some foo to handle automake-1.9.x too.

2004-05-13  James Henstridge  <james@daa.com.au>

	* autogen.sh: Change the order the various tools are called in to
	match that of autoconf's autoupdate tool.  See bug 138584.

2004-01-31  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Use automake-1.8 if available. Patch from
	alexander.winston@comcast.net (Alexander Winston). Bug #132966.

2004-01-25  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Deprecate the use of GNOME2_DIR and allow the use
	of GNOME2_PATH (bug #130516).

2004-01-02  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Run intltoolize after automake, since intltoolize
	wants mkinstalldirs now. Should fix bugs #130309 and #130366.

2003-12-13  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Change the use of head to be 'head -n -1', since
	the GNU version of head appears to have changed behaviour
	between version 5.0 and 5.0.9 somewhere. This should be portable
	across all versions now. Fixed bug #128867.

2003-12-08  Rodney Dawes  <dobey@free.fr>

	* autogen.sh: Update automake checks to check incremental
	versions in the correct order, Fixes #128691

2003-11-19  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Replace use of -or in a find command with -o.
	Makes things work for people with less functional versions of
	find. Fixes bug #127354 reported by Rolf Sponsel.

2003-11-03    <clahey@ximian.com>
